syntax = "proto3";
package rrfp;

message Message {
	Head hd = 10;
	Body by	= 20;
}

message Head {
	string sesionNo	= 10;
	string uniqueId	= 20;
}

message Body {
	oneof msgType {
		ExampleEchoRequest example_echo_request = 10;
		ExampleEchoResponse example_echo_response = 20;
	}
}

message ExampleEchoRequest {
	string msg = 10;
}
message ExampleEchoResponse {
	string msg = 10;
}

